--- a/VS10/VS10/VS10.vcxproj.filters
+++ b/VS10/VS10/VS10.vcxproj.filters
@@ -16,6 +16,9 @@
     <Filter Include="FreeType">
       <UniqueIdentifier>{a84ce879-e058-4337-b4d1-57a25a73e3a1}</UniqueIdentifier>
     </Filter>
+    <Filter Include="2048">
+      <UniqueIdentifier>{91d08748-a20a-420d-b493-33988014b232}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -30,6 +33,9 @@
     <ClCompile Include="cFT.cpp">
       <Filter>FreeType</Filter>
     </ClCompile>
+    <ClCompile Include="c2048.cpp">
+      <Filter>2048</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="cTetris.h">
@@ -40,6 +46,12 @@
     </ClInclude>
     <ClInclude Include="cFT.h">
       <Filter>FreeType</Filter>
+    </ClInclude>
+    <ClInclude Include="c2048.h">
+      <Filter>2048</Filter>
+    </ClInclude>
+    <ClInclude Include="cGame.h">
+      <Filter>Заголовочные файлы</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
