Game 2048 Release v1.0 25.10.16 3.22am MSK

--- a/VS10/VS10/VS10.vcxproj
+++ b/VS10/VS10/VS10.vcxproj
@@ -84,7 +84,6 @@
   <ItemGroup>
     <ClCompile Include="c2048.cpp" />
     <ClCompile Include="cFT.cpp" />
-    <ClCompile Include="cTest.cpp" />
     <ClCompile Include="cTetris.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
@@ -92,8 +91,8 @@
     <ClInclude Include="c2048.h" />
     <ClInclude Include="cFT.h" />
     <ClInclude Include="cGame.h" />
-    <ClInclude Include="cTest.h" />
     <ClInclude Include="cTetris.h" />
+    <ClInclude Include="сAllocator.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
